--- a/Authority/Web.config
+++ b/Authority/Web.config
@@ -17,7 +17,7 @@
       <forms loginUrl="~/FormsAuthentication/Login" timeout="2880">
         <credentials passwordFormat="Clear">
           <user name="after" password="after" />
-          <user name="admin" password="secret" />
+          <user name="wao" password="wao" />
           <user name="add" password="add" />
         </credentials>
       </forms>
